# orientdb-stress

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.cfg  stress.py
.cspell/: custom-dictionary-workspace.txt
config/: hazelcast-1.xml  hazelcast-2.xml  hazelcast-3.xml
orientdb_stress/: __init__.py  __main__.py  console.py  core.py  docker.py  orientdb.py  process.py  record.py  restarter.py  scenario.py  scenarios.py  schema.py  templates.py  timed.py  workload.py
orientdb_stress/templates/: docker-compose-orientdb.yml.j2
orientdb_stress/templates/config/: distributed-db-config.json.j2  hazelcast.xml.j2
orientdb_stress_tester/: __init__.py  concurrent.py  console.py  orientdb.py  process.py  record.py  restarter.py  scenario.py  scenarios.py  schema.py  workload.py
