[tool.poetry]
name = "orientdb-stress"
version = "0.1.0"
description = "A Docker based stress testing tool for OrientDB"
authors = ["Tim Whittington <tim.whittington@indexity.io>"]
readme = "README.md"
packages = [{include = "orientdb_stress"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pylint = "^2.14.5"
types-requests = "^2.28.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 130

[tool.isort]
profile = "black" 


[tool.mypy]
ignore_missing_imports = false
follow_imports = "silent"
show_column_numbers = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_subclassing_any = true


[tool.pylint.messages_control]
max-line-length = 130
disable = [
  "invalid-name",
  "fixme",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "too-few-public-methods",
  "too-many-instance-attributes",
  "too-many-locals",
]

[tool.poetry.scripts]
orientdb-stress = 'orientdb_stress.console:main'
