[build-system]
requires = ["poetry_core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "orientdb-stress"
version = "0.2.0"
description = "A Docker based stress testing tool for OrientDB"
authors = ["Tim Whittington <tim.whittington@indexity.io>"]
readme = "README.md"
packages = [{ include = "orientdb_stress" }]

[tool.poetry.scripts]
orientdb-stress = 'orientdb_stress.console:main'

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
poetry = "^2.1.3"
jinja2 = "^3.1.2"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pylint = "^2.14.5"
types-requests = "^2.28.8"

[tool.black]
line-length = 130
exclude = '''
/(
    \.git
  | __pycache__
  | \.mypy_cache
  | \.toxrm 
  | venv
  | \.venv
  | \.vscode
  | build
  | dist
  | target
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = false
follow_imports = "silent"
show_column_numbers = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_subclassing_any = true


[tool.pylint.messages_control]
max-line-length = 130
disable = [
  "invalid-name",
  "fixme",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "too-few-public-methods",
  "too-many-instance-attributes",
  "too-many-locals",
]
